--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ ul {
 
 .top-banner {
     background-color: #3dadd3;
-    background-image: url('./assets/asset\ 32.png');
+    background-image: url('./asset 32.png');
     background-size: 300px;
     
     
@@ -288,7 +288,7 @@ ul {
     width: 23%;
     position: relative;
     height: 300px;
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 37.jpeg);
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./asset\ 37.jpeg);
     background-size: cover;
     transition: 0.4s ease-out;   /*for hover effect */
  }
@@ -314,17 +314,17 @@ ul {
  }        
 
  .example-card:nth-child(2) {
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 36.jpeg);;
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./asset\ 36.jpeg);;
     background-size: cover;
  }
 
  .example-card:nth-child(3) {
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 38.jpeg);;
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./asset\ 38.jpeg);;
     background-size: cover;
  }
 
  .example-card:nth-child(4) {
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 39.jpeg);;
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./asset\ 39.jpeg);;
     background-size: cover;
  }
 /* CTA section */
